--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,15 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
+
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need permission to access your location!</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need permission to access your location!</string>
+
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We need permission to access gallery to pick image!</string>
 	<key>NSCameraUsageDescription </key>
