--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   image_picker: ^0.6.0+9
   path_provider: ^1.1.0
   path: ^1.6.2
+  sqflite: ^1.3.0
+  location: ^3.0.2
+  google_maps_flutter: ^0.5.27
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
